Created population density model
