# stub/openapi_server/models/__init__.py
@@ -6,4 +6,5 @@ from __future__ import absolute_import
 from openapi_server.models.bus import Bus
 from openapi_server.models.busstop import Busstop
 from openapi_server.models.busstop_weather import BusstopWeather
+from openapi_server.models.population_density import PopulationDensity
 from openapi_server.models.route import Route
